temp/case_compare/actidev/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>