temp/case_compare/actidev/objects/Case/fields/Act_datos_cda__c.field-meta.xml
<CustomField>
    <fullName>Act_datos_cda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualización de datos completada</label>
    <type>Checkbox</type>
</CustomField>