temp/case_compare/actidev/objects/Case/fields/Asesor_destino__c.field-meta.xml
<CustomField>
    <fullName>Asesor_destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>En caso de no encontrar el nombre del asesor, agrega su nombre en el campo Descripción.</inlineHelpText>
    <label>Asesor destino</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>