temp/case_compare/actidev/objects/Case/fields/Cance_completada__c.field-meta.xml
<CustomField>
    <fullName>Cance_completada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cancelación en SAP</description>
    <inlineHelpText>Cancelación en SAP</inlineHelpText>
    <label>Cancelación completada</label>
    <type>Checkbox</type>
</CustomField>