temp/case_compare/actidev/objects/Case/fields/Centro_Financiero_destino__c.field-meta.xml
<CustomField>
    <fullName>Centro_Financiero_destino__c</fullName>
    <formula>Asesor_destino__r.Division</formula>
    <label>Centro Financiero destino</label>
    <type>Text</type>
</CustomField>