temp/case_compare/actidev/objects/Case/fields/Chat_Visitor_ChatHistory__c.field-meta.xml
<CustomField>
    <fullName>Chat_Visitor_ChatHistory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Visitor Histórico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>