temp/case_compare/actidev/objects/Case/fields/Chat_Visitor_LastName__c.field-meta.xml
<CustomField>
    <fullName>Chat_Visitor_LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Visitor Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>