temp/case_compare/actidev/objects/Case/fields/Chat_Visitor_Origin_App__c.field-meta.xml
<CustomField>
    <fullName>Chat_Visitor_Origin_App__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Visitor Aplicación Origen</label>
    <length>40</length>
    <type>Text</type>
</CustomField>