temp/case_compare/actidev/objects/Case/fields/Chat_Visitor_Origin_App_Desc__c.field-meta.xml
<CustomField>
    <fullName>Chat_Visitor_Origin_App_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Visitor Aplicación Origen Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>