temp/case_compare/actidev/objects/Case/fields/Conf_contratos__c.field-meta.xml
<CustomField>
    <fullName>Conf_contratos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación de área de contratos</label>
    <type>Checkbox</type>
</CustomField>