temp/case_compare/actidev/objects/Case/fields/Dato_a_Actualizar__c.field-meta.xml
<CustomField>
    <fullName>Dato_a_Actualizar__c</fullName>
    <label>Dato a Actualizar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CURP</fullName>
            </value>
            <value>
                <fullName>RFC</fullName>
            </value>
            <value>
                <fullName>NOMBRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>