temp/case_compare/actidev/objects/Case/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo/Abierto</fullName>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Escalado</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>