temp/case_compare/actidev/objects/Case/fields/Fecha_de_respuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_respuesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de respuesta</label>
    <type>Date</type>
</CustomField>