temp/case_compare/actidev/objects/Case/fields/Figuras_Relacionadas__c.field-meta.xml
<CustomField>
    <fullName>Figuras_Relacionadas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Figuras Relacionadas</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Figuras_Relacionadas__c.Num_Contrato__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contrato__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Figuras_Relacionadas__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>