temp/case_compare/actidev/objects/Case/fields/ID_ASESOR__c.field-meta.xml
<CustomField>
    <fullName>ID_ASESOR__c</fullName>
    <formula>Contrato__r.ID_ASESOR__c</formula>
    <label>ID_ASESOR</label>
    <type>Text</type>
</CustomField>