temp/case_compare/actidev/objects/Case/fields/Lada__c.field-meta.xml
<CustomField>
    <fullName>Lada__c</fullName>
    <formula>text(Account.CountryCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lada</label>
    <type>Text</type>
</CustomField>