temp/case_compare/actidev/objects/Case/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjetas</fullName>
            </value>
            <value>
                <fullName>Cheques</fullName>
            </value>
            <value>
                <fullName>Compra y venta de fondos Banco</fullName>
            </value>
            <value>
                <fullName>Envío de Información</fullName>
            </value>
            <value>
                <fullName>SPEI Banco</fullName>
            </value>
            <value>
                <fullName>Banca electrónica</fullName>
            </value>
            <value>
                <fullName>Reporte de Incidentes</fullName>
            </value>
            <value>
                <fullName>Asistencia e información</fullName>
            </value>
            <value>
                <fullName>CD, Pagaré, Saving</fullName>
            </value>
            <value>
                <fullName>UNE</fullName>
            </value>
            <value>
                <fullName>Consulta de saldos</fullName>
            </value>
            <value>
                <fullName>compra y venta capitales, divisas y fondos casa de bolsa</fullName>
            </value>
            <value>
                <fullName>Reto Actinver y Marketing</fullName>
            </value>
            <value>
                <fullName>Transferencia a otras áreas Actinver</fullName>
            </value>
            <value>
                <fullName>Transferencia interna CAT</fullName>
            </value>
            <value>
                <fullName>Previsión Social</fullName>
            </value>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Cambio de Asesor y/o Centro Financiero</fullName>
            </value>
            <value>
                <fullName>Cancelación cliente</fullName>
                <label>Cancelación de cliente</label>
            </value>
            <value>
                <fullName>Comprobantes</fullName>
            </value>
            <value>
                <fullName>Cartas ratificación</fullName>
            </value>
            <value>
                <fullName>Envío estados de cuenta y constancia fiscal</fullName>
            </value>
            <value>
                <fullName>Consulta-errores en Estado de Cuenta o Centro Financiero</fullName>
            </value>
            <value>
                <fullName>Mal Servicio</fullName>
            </value>
            <value>
                <fullName>Cancelación interna</fullName>
                <label>Cancelación Interna</label>
            </value>
            <value>
                <fullName>Cancelación</fullName>
            </value>
            <value>
                <fullName>Envio Estados cuenta</fullName>
                <label>Envío de Estados de cuenta</label>
            </value>
            <value>
                <fullName>Consulta Errores Edo Cuenta</fullName>
                <label>Consulta-Errores en Estado de Cuenta</label>
            </value>
            <value>
                <fullName>Consulta-Errores en Constancia Fiscal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>