temp/case_compare/actidev/objects/Case/fields/Recep_form_dire__c.field-meta.xml
<CustomField>
    <fullName>Recep_form_dire__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Recepción de formato firmado por directo</inlineHelpText>
    <label>Recepción de formato firmado</label>
    <type>Checkbox</type>
</CustomField>