temp/case_compare/actidev/objects/Case/fields/Rev_form_comp_firm__c.field-meta.xml
<CustomField>
    <fullName>Rev_form_comp_firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisión de formato completo y firmado</label>
    <type>Checkbox</type>
</CustomField>