temp/case_compare/actidev/objects/Case/fields/SAP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Number__c</fullName>
    <formula>Contrato__r.ContractNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Contrato SAP</label>
    <type>Text</type>
</CustomField>