temp/case_compare/actidev/objects/Case/fields/Sol_Corr__c.field-meta.xml
<CustomField>
    <fullName>Sol_Corr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Solicitud a las áreas de apoyo por correo electrónico</description>
    <inlineHelpText>Solicitud a las áreas de apoyo por correo electrónico</inlineHelpText>
    <label>Solicitud de corrección</label>
    <type>Checkbox</type>
</CustomField>