temp/case_compare/actidev/objects/Case/fields/Solicitado_por__c.field-meta.xml
<CustomField>
    <fullName>Solicitado_por__c</fullName>
    <label>Solicitado por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Titular</fullName>
            </value>
            <value>
                <fullName>Apoderado</fullName>
            </value>
            <value>
                <fullName>Cotitular</fullName>
            </value>
            <value>
                <fullName>Persona Autorizada</fullName>
            </value>
            <value>
                <fullName>Externo</fullName>
            </value>
            <value>
                <fullName>Prospecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>