temp/case_compare/actidev/objects/Case/fields/Submotivo__c.field-meta.xml
<CustomField>
    <fullName>Submotivo__c</fullName>
    <label>Submotivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consulta</fullName>
            </value>
            <value>
                <fullName>Reporte por robo o extravío</fullName>
            </value>
            <value>
                <fullName>Activar Banca Electrónica</fullName>
            </value>
            <value>
                <fullName>Información Banca Electrónica</fullName>
            </value>
            <value>
                <fullName>Reportar incidente</fullName>
            </value>
            <value>
                <fullName>Información Tarjeta</fullName>
            </value>
            <value>
                <fullName>Activar Bursanet</fullName>
            </value>
            <value>
                <fullName>Reportar incidente Bursanet</fullName>
            </value>
            <value>
                <fullName>Información Bursanet</fullName>
            </value>
            <value>
                <fullName>Operaciones Banco</fullName>
            </value>
            <value>
                <fullName>Operaciones CB</fullName>
            </value>
            <value>
                <fullName>Operaciones Bursanet</fullName>
            </value>
            <value>
                <fullName>Hacer una aclaración</fullName>
            </value>
            <value>
                <fullName>Seguimiento a aclaración</fullName>
            </value>
            <value>
                <fullName>Información Seguros</fullName>
            </value>
            <value>
                <fullName>Cuento con un seguro</fullName>
            </value>
            <value>
                <fullName>Información Previsión Social</fullName>
            </value>
            <value>
                <fullName>Desbloqueo o reseteo de contraseña</fullName>
            </value>
            <value>
                <fullName>Cambio o cercanía de domicilio</fullName>
            </value>
            <value>
                <fullName>Por recomendación</fullName>
            </value>
            <value>
                <fullName>Ya no labora / Sin Asesor</fullName>
            </value>
            <value>
                <fullName>Carta en Centro Financiero o Correo - Sin Motivo</fullName>
            </value>
            <value>
                <fullName>Utilizará el dinero / Temas personales</fullName>
            </value>
            <value>
                <fullName>No utiliza la cuenta / Evitar Anualidad</fullName>
            </value>
            <value>
                <fullName>Ex Empleado</fullName>
            </value>
            <value>
                <fullName>Tiene otra cuenta en Actinver</fullName>
            </value>
            <value>
                <fullName>Falta de Asesoría y/o Servicio</fullName>
            </value>
            <value>
                <fullName>Masivas</fullName>
            </value>
            <value>
                <fullName>Fallecimiento del Tìtular</fullName>
            </value>
            <value>
                <fullName>Inactividad de la Cuenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>