temp/case_compare/actidev/objects/Case/fields/Submotivo_CAT__c.field-meta.xml
<CustomField>
    <fullName>Submotivo_CAT__c</fullName>
    <description>Campo que muestra los valores de las tipificaciones del CAT</description>
    <label>Submotivo_CAT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo_CAT__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceso A Plataformas Anteriores</fullName>
            </value>
            <value>
                <fullName>Acceso Plataformas Anteriores</fullName>
            </value>
            <value>
                <fullName>Aclaraciones</fullName>
            </value>
            <value>
                <fullName>Aclaracion Mov Tdd</fullName>
            </value>
            <value>
                <fullName>Aclaracion Spei</fullName>
            </value>
            <value>
                <fullName>Act Celular</fullName>
            </value>
            <value>
                <fullName>Act Correo Electronico</fullName>
            </value>
            <value>
                <fullName>Act Domicilio</fullName>
            </value>
            <value>
                <fullName>Activación</fullName>
            </value>
            <value>
                <fullName>Activación Chequera</fullName>
            </value>
            <value>
                <fullName>Activación TDD</fullName>
            </value>
            <value>
                <fullName>Activación Token</fullName>
            </value>
            <value>
                <fullName>Activar</fullName>
            </value>
            <value>
                <fullName>Activa Token</fullName>
            </value>
            <value>
                <fullName>Actualización CURP</fullName>
            </value>
            <value>
                <fullName>Actualizacion Datos</fullName>
            </value>
            <value>
                <fullName>Actualización Datos Fiscales</fullName>
            </value>
            <value>
                <fullName>Actualización datos laborales</fullName>
            </value>
            <value>
                <fullName>Actualización de Actividad económica / clasificación de persona</fullName>
            </value>
            <value>
                <fullName>Actualización de beneficiarios</fullName>
            </value>
            <value>
                <fullName>Actualización de correo electrónico</fullName>
            </value>
            <value>
                <fullName>Actualización De Firma (Física / Moral)</fullName>
            </value>
            <value>
                <fullName>Actualización domicilio</fullName>
            </value>
            <value>
                <fullName>Actualización entidad federativa de nac.</fullName>
            </value>
            <value>
                <fullName>Actualización estado civil / tipo de matrimonio</fullName>
            </value>
            <value>
                <fullName>Actualización fecha de nacimiento</fullName>
            </value>
            <value>
                <fullName>Actualización general de contrato</fullName>
            </value>
            <value>
                <fullName>Actualización género</fullName>
            </value>
            <value>
                <fullName>Actualización RFC</fullName>
            </value>
            <value>
                <fullName>Actualización teléfono</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>