temp/case_compare/actidev/objects/Case/fields/Tipo_de_Caso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Caso__c</fullName>
    <description>Campo que muestra el tipo de caso aperturado</description>
    <label>Tipo de Caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Actinver Trade</fullName>
            </value>
            <value>
                <fullName>Asignaciones</fullName>
            </value>
            <value>
                <fullName>Banca Partner</fullName>
            </value>
            <value>
                <fullName>Banco</fullName>
                <isActive>false</isActive>
                <label>Banco</label>
            </value>
            <value>
                <fullName>Banco / Casa de Bolsa</fullName>
            </value>
            <value>
                <fullName>Casa de Bolsa</fullName>
                <isActive>false</isActive>
                <label>Casa de Bolsa</label>
            </value>
            <value>
                <fullName>DINN</fullName>
            </value>
            <value>
                <fullName>Gestion Operativa</fullName>
            </value>
            <value>
                <fullName>Liverpol</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Prospectos</fullName>
            </value>
            <value>
                <fullName>Salesforce Admon. Contratos</fullName>
            </value>
            <value>
                <fullName>SEDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>