temp/case_compare/actidev/objects/Case/recordTypes/Cambio_de_Asesor_y_o_Centro_Financiero.recordType-meta.xml
<RecordType>
    <fullName>Cambio_de_Asesor_y_o_Centro_Financiero</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Cambio de Asesor y/o Centro Financiero</label>
</RecordType>