temp/case_compare/actidev/objects/Case/recordTypes/Cancelacion_cliente.recordType-meta.xml
<RecordType>
    <fullName>Cancelacion_cliente</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Cancelación de cliente</label>
</RecordType>