temp/case_compare/actidev/objects/Case/recordTypes/Cancelacion_interna.recordType-meta.xml
<RecordType>
    <fullName>Cancelacion_interna</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Cancelación interna</label>
</RecordType>