temp/case_compare/actidev/objects/Case/recordTypes/Cartas_Ratificacion.recordType-meta.xml
<RecordType>
    <fullName>Cartas_Ratificacion</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Cartas Ratificación</label>
</RecordType>