temp/case_compare/actidev/objects/Case/recordTypes/Casos_CAT.recordType-meta.xml
<RecordType>
    <fullName>Casos_CAT</fullName>
    <active>true</active>
    <businessProcess>Proceso de Soporte CAT</businessProcess>
    <label>Casos CAT</label>
</RecordType>