temp/case_compare/actidev/objects/Case/recordTypes/Casos_CAT_SEDI.recordType-meta.xml
<RecordType>
    <fullName>Casos_CAT_SEDI</fullName>
    <active>true</active>
    <businessProcess>Proceso de Soporte CAT</businessProcess>
    <label>Casos CAT SEDI</label>
</RecordType>