temp/case_compare/actidev/objects/Case/recordTypes/CAT.recordType-meta.xml
<RecordType>
    <fullName>CAT</fullName>
    <active>true</active>
    <businessProcess>Proceso de Soporte CAT</businessProcess>
    <label>CAT</label>
</RecordType>