temp/case_compare/actidev/objects/Case/recordTypes/Comprobantes.recordType-meta.xml
<RecordType>
    <fullName>Comprobantes</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Comprobantes</label>
</RecordType>