temp/case_compare/actidev/objects/Case/recordTypes/Consulta_Errores_en_Constancia_Fiscal.recordType-meta.xml
<RecordType>
    <fullName>Consulta_Errores_en_Constancia_Fiscal</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Consulta-Errores en Constancia Fiscal</label>
</RecordType>