temp/case_compare/actidev/objects/Case/recordTypes/Consulta_Errores_en_Estado_de_Cuenta.recordType-meta.xml
<RecordType>
    <fullName>Consulta_Errores_en_Estado_de_Cuenta</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Consulta-Errores en Estado de Cuenta</label>
</RecordType>