temp/case_compare/actidev/objects/Case/recordTypes/Desbloqueo_Cuenta_Eje.recordType-meta.xml
<RecordType>
    <fullName>Desbloqueo_Cuenta_Eje</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Desbloqueo Cuenta Eje</label>
</RecordType>