temp/case_compare/actidev/objects/Case/recordTypes/Envio_Constancia_Fiscal.recordType-meta.xml
<RecordType>
    <fullName>Envio_Constancia_Fiscal</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Envío Constancia Fiscal</label>
</RecordType>