temp/case_compare/actidev/objects/Case/recordTypes/Envio_Estados_de_Cuenta.recordType-meta.xml
<RecordType>
    <fullName>Envio_Estados_de_Cuenta</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Envío de Estados de Cuenta</label>
</RecordType>