temp/case_compare/actidev/objects/Case/recordTypes/Mal_servicio.recordType-meta.xml
<RecordType>
    <fullName>Mal_servicio</fullName>
    <active>true</active>
    <businessProcess>Proceso de soporte UNE</businessProcess>
    <label>Mal servicio</label>
</RecordType>