temp/case_compare/actidev/objects/Case/validationRules/CACF_Required_Notif_Directores.validationRule-meta.xml
<ValidationRule>
    <fullName>CACF_Required_Notif_Directores</fullName>
    <active>true</active>
    <description>//针对记录类型为 Cambio_de_Asesor_y_o_Centro_Financiero 的数据 状态变为Proceso de callback时 Notif_Directores__c为true</description>
    <errorConditionFormula>RecordType.DeveloperName  = &quot;Cambio_de_Asesor_y_o_Centro_Financiero&quot; &amp;&amp; ISCHANGED(Status) &amp;&amp; TEXT(Status) == &apos;Proceso de callback&apos; &amp;&amp; Notif_Directores__c == false</errorConditionFormula>
    <errorMessage>Complete todos los campos antes de continuar.</errorMessage>
</ValidationRule>