temp/case_compare/actidev/objects/Case/validationRules/CEECCF_Required_Cor_doc_apoyo.validationRule-meta.xml
<ValidationRule>
    <fullName>CEECCF_Required_Cor_doc_apoyo</fullName>
    <active>true</active>
    <description>记录类型为Consulta/Errores en Estado de Cuenta o Constancia Fiscal的数据 当状态变为：Proceso de callback时 Cor_doc_apoyo__c为true
// Consulta_Errores_en_Estado_de_Cuenta &amp; Consulta_Errores_en_Constancia_Fiscal</description>
    <errorConditionFormula>AND(
  OR(
    RecordType.DeveloperName == &apos;Consulta_Errores_en_Constancia_Fiscal&apos;,
    RecordType.DeveloperName == &apos;Consulta_Errores_en_Estado_de_Cuenta&apos;
    ),
    ISCHANGED(Status) &amp;&amp; TEXT(Status) == &apos;Proceso de callback&apos;,
    Cor_doc_apoyo__c == false
)</errorConditionFormula>
    <errorMessage>Complete todos los campos antes de continuar.</errorMessage>
</ValidationRule>