temp/case_compare/actidev/objects/Case/validationRules/TwoRecoedType_Required_Conf_recepcion.validationRule-meta.xml
<ValidationRule>
    <fullName>TwoRecoedType_Required_Conf_recepcion</fullName>
    <active>true</active>
    <description>//记录类型为Cartas Ratificación 或者Envío de Estados de Cuenta y/o Constancia fiscal时
状态变为Cierre时 Conf_recepcion__c为true // Added and changed record type names</description>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName == &apos;Cartas_Ratificacion&apos;,
        RecordType.DeveloperName == &apos;Envio_Estados_de_Cuenta&apos;,
        RecordType.DeveloperName == &apos;Envio_Constancia_Fiscal&apos;
    ),
    ISCHANGED(Status) &amp;&amp; TEXT(Status) == &apos;Cierre&apos;,
    TEXT(Cancelacion_de_caso__c) == &apos;No_sigue_proceso&apos;,
    Conf_recepcion__c == false
)</errorConditionFormula>
    <errorMessage>Complete todos los campos antes de continuar.</errorMessage>
</ValidationRule>