temp/case_compare/actidev/objects/Case/listViews/BCO_OP_Queue_Case.listView-meta.xml
<ListView>
    <fullName>BCO_OP_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BCO OP Queue</label>
    <queue>BCO_OP_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>