temp/case_compare/actidev/objects/Case/listViews/Mis_Casos_Abiertos_en_Registro_de_Folio.listView-meta.xml
<ListView>
    <fullName>Mis_Casos_Abiertos_en_Registro_de_Folio</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>SAP_Contract_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Motivo__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Registro_de_folio</value>
    </filters>
    <label>Mis Casos Abiertos en Registro de Folio</label>
</ListView>