temp/case_compare/actidev/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Tipo_de_Caso__c</columns>
    <columns>Motivo_CAT__c</columns>
    <columns>Submotivo_CAT__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Mis casos</label>
</ListView>