temp/case_compare/actidev/objects/Case/listViews/Todos_los_casos.listView-meta.xml
<ListView>
    <fullName>Todos_los_casos</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>SAP_Contract_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Motivo__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los casos</label>
</ListView>